--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,26 @@ body {
   font-size: 3rem;
 }
 
+.start-btn{
+  
+    background-color: rgb(255, 255, 255); /* Green */
+    border: none;
+    color: black;
+    font-size: 2rem;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin-top:55px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 7%;
+}
+
+.start-btn:hover{
+  background-color: yellow;
+}
+
 @media (max-width:520px){
   .container{
     width: 50%;
