--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-  display: block;
+  display: inline-block;;
   width: 550px;
   margin: auto;
 
@@ -54,6 +54,15 @@ body {
 
 .score{
   font-size: 3rem;
+}
+
+.high-score{
+   width: 300px;
+   height: 300px;
+   right:0%;
+   top:24%;
+   background-color: black;
+  position: absolute;
 }
 
 .start-btn{
